<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".LoginForm">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="52dp"
            android:src="@drawable/buser_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/buser"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:drawableEnd="@drawable/ic_email_24"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:hint="@string/senha"
            android:inputType="numberPassword"
            android:drawableEnd="@drawable/eye_24"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botao_entrar"
            style="@style/Button"
            android:text="@string/entrar"
            android:textColor="@color/pink"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            />

        <TextView
            android:id="@+id/cadastre_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/n_o_possui_conta_cadastre_se_j"
            android:textColor="@color/pink"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>